[package]
name = "dogedoge"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
warp = "0.3.0"
pretty_env_logger = "*"
log = "*"
serde = "*"
serde_derive = "*"